syntax="proto3";

option go_package = "./proto";
package greet_service;


service GreetService{
    rpc SayHello(NoParam) returns (HelloResponse);
}


message NoParam{}

message HelloRequest {
    string message = 1;
}
message HelloResponse{
    string message = 1;
}